@@ -1,0 +1,4 @@
+noinst_LIBRARIES= libeyedbworkutils.a
+
+libeyedbworkutils_a_SOURCES= \
+properties.cc 
