@@ -1,3 +1,7 @@
+2009-02-04 12:38 François Déchelle
+
+	* Added topic utils
+
 2009-02-02 15:27 François Déchelle
 
 	* Added topic zub
